# hindsight

./: README.md  pyproject.toml  schema.sql  serve.sh
benchmarks/: README.md
benchmarks/common/: benchmark_runner.py
benchmarks/locomo/: benchmark_results.json  benchmark_results_think.json  locomo_benchmark.py  results_table.md  results_table_think.md  run_benchmark.py
benchmarks/longmemeval/: longmemeval_benchmark.py  run_benchmark.py
benchmarks/visualizer/: README.md  serve.sh  server.py
benchmarks/visualizer/static/: index.html
benchmarks/visualizer/static/css/: styles.css
benchmarks/visualizer/static/js/: app.js
examples/: parallel_think.py  trace_example.py
helm/hindsight/templates/: api-deployment.yaml
hindsight-clients/python/hindsight_client_api/models/: document_response.py  reflect_mental_model.py
memory/: __init__.py  search_trace.py  search_tracer.py  temporal_semantic_memory.py  utils.py  visualizer.py
migrations/: 001_add_links_composite_index.sql
scripts/: profile_queries.py
tests/: test_search_trace.py
web/: server.py
web/static/css/: styles.css
web/static/js/: app.js  locomo.js
web/templates/: index.html
